# search-ghost

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh-CN.md  SPEC.md  pyproject.toml
src/search_ghost/: cli.py  config.py  deps.py  kb.py  main.py  models.py
src/search_ghost/api/: chat.py  documents.py  search.py  tasks.py
src/search_ghost/layers/generation/: citation_builder.py  llm_client.py  rag_pipeline.py
src/search_ghost/layers/ingestion/: router.py
src/search_ghost/layers/processing/: chunker.py  direct_pipeline.py  embedder.py
src/search_ghost/layers/processing/parsers/: markdown.py  registry.py
src/search_ghost/layers/retrieval/: hybrid_search.py
src/search_ghost/layers/storage/: document_store.py  object_store.py  vector_store.py
src/search_ghost/worker/: queue.py  worker.py
tests/unit/: test_chunker.py  test_hybrid_search.py  test_markdown_parser.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts
web/src/components/chat/: ChatPanel.tsx
web/src/pages/: DocumentsPage.tsx  IngestPage.tsx  SearchPage.tsx  TasksPage.tsx
